--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type"
 content="text/html; charset=iso-8859-1">
-<title>Paiementdu Compte CHB</title>
+<title>Achat compte CHB</title>
 </head>
  
 <body bgcolor="#FFFFFF">
@@ -33,11 +33,11 @@ use for your purchase:</font></p>
     <input type="hidden" name="PAYMENT_AMOUNT" value="115">
     <input type="hidden" name="PAYMENT_UNITS" value="EUR">
     <input type="hidden" name="STATUS_URL" 
-        value="">
+        value="https://www.myshop.com/cgi-bin/xact.cgi">
     <input type="hidden" name="PAYMENT_URL" 
-        value="">
+        value="https://www.myshop.com/cgi-bin/chkout1.cgi">
     <input type="hidden" name="NOPAYMENT_URL" 
-        value="">
+        value="https://www.myshop.com/cgi-bin/chkout2.cgi">
     <input type="hidden" name="BAGGAGE_FIELDS" 
         value="ORDER_NUM CUST_NUM">
     <input type="hidden" name="ORDER_NUM" value="9801121">
